<resources>
    <string name="app_name">Prescription</string>
    <string name="action_settings">Settings</string>
    <string name="prescription">Prescription</string>
    <string name="nameDisplay">Name:</string>
    <string name="firstName">Enter First Name</string>
    <string name="lastName">Enter Last Name</string>
    <string name="pharmacy">Pharmacy:</string>
    <string name="prescriptions">Prescriptions:</string>
    <string name="select_a_date">Select a Date</string>
    <string name="datepicker">datePicker</string>
    <string-array name="pharmacies">
        <item>Select a Pharmacy</item>
        <item>CVS</item>
        <item>Walgreens</item>
        <item>Walmart</item>
    </string-array>

    <!-- Order Activity -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Hello, %1$s!</string>
    <string name="select_a_time">Select a Time</string>
    <string name="time_display">Time</string>
    <string name="date_selected_from_button">Date</string>
</resources>
