<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/prescription_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/prescription"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nameDisplay"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/firstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescription_title" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintStart_toEndOf="@+id/name" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstName" />

    <TextView
        android:id="@+id/pickPharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/pharmacy"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/prescriptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/prescriptions"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/pickPharmacy"
        app:layout_constraintTop_toBottomOf="@+id/pickPharmacy" />

    <Spinner
        android:id="@+id/pharmacySpinner"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/pickPharmacy"
        app:layout_constraintStart_toEndOf="@+id/pickPharmacy"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <Spinner
        android:id="@+id/prescriptionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/prescriptions"
        app:layout_constraintStart_toEndOf="@+id/prescriptions"
        app:layout_constraintTop_toBottomOf="@+id/pharmacySpinner" />

    <Button
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="showDatePicker"
        android:text="@string/select_a_date"
        app:layout_constraintStart_toStartOf="@+id/prescriptions"
        app:layout_constraintTop_toBottomOf="@+id/prescriptions" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/select_a_time"
        app:layout_constraintStart_toStartOf="@+id/datePicker"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

    <TextView
        android:id="@+id/selectedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:text="@string/time_display"
        app:layout_constraintStart_toEndOf="@+id/timeButton"
        app:layout_constraintTop_toBottomOf="@+id/selectedDate" />

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:text="@string/date_selected_from_button"
        app:layout_constraintStart_toEndOf="@+id/datePicker"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>